--- a/public/header.html
+++ b/public/header.html
@@ -60,10 +60,10 @@
         <a class="nav-link text-light" href="">购物</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link font-red" href="">酒店</a>
+        <a class="nav-link text-light" href="">酒店</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link font-red" href="">资讯</a>
+        <a class="nav-link text-light" href="">资讯</a>
     </li>
   </ul>
 </div>
