food.html--modify

--- a/public/header.html
+++ b/public/header.html
@@ -51,9 +51,6 @@
         <a class="nav-link text-light" href="">美食</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" href="">美食</a>
-    </li>
-    <li class="nav-item">
         <a class="nav-link text-light" href="">美景</a>
     </li>
     <li class="nav-item">
@@ -61,6 +58,9 @@
     </li>
     <li class="nav-item">
         <a class="nav-link text-light" href="">酒店</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-light" href="">攻略</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-light" href="">资讯</a>
