--- a/public/strategy.html
+++ b/public/strategy.html
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="row no-gutters">
         <!-- 左侧部分 -->
-        <div class="col-8">
+        <div class="col-9">
             <div class="region border border-red rounded">
                 <!-- 重庆各区名 -->
                 <div class="border-bottom border-red row no-gutters">
@@ -237,8 +237,9 @@
             </div>            
         </div>
       
-        <!-- 右边部分 -->
-        <div class="col-4">
+        <!-- 右2 -->
+        <div class="col-3">
+            <!-- 排行榜 -->
             <div id="parent" class="border rounded border-red ml-2">
                 <p class="col-12 bg-red rounded-top text-light p-1 pl-2 m-0">排行榜</p>
                 <div class="card">
@@ -246,7 +247,8 @@
                         <a class="card-link font-small font-red" data-toggle="collapse" href="#card1">卡片一</a>
                     </div>
                     <div id="card1" class="collapse" data-parent="#parent">
-                        <div class="card-body row no-gutters">
+                        <div class="card-body p-1 row no-gutters">
+                            <!-- 1 -->
                             <img class="col-4 w-100" src="../img/strategy/meishi/huoguo1.jpg" alt="">
                             <div class="col-8 p-3">
                                 <p class="text-primary font-small m-0 mb-1 py-0">洞子·老火锅</p>
@@ -260,7 +262,8 @@
                         <a class="card-link font-small font-red" data-toggle="collapse" href="#card2">卡片二</a>
                     </div>
                     <div id="card2" class="collapse" data-parent="#parent">
-                        <div class="card-body row no-gutters">
+                        <div class="card-body p-1 row no-gutters">
+                            <!-- 2 -->
                             <img class="col-4 w-100" src="../img/strategy/jingqu/hyd.jpg" alt="">
                             <div class="col-8 p-3">
                                 <p class="text-primary font-small m-0 mb-1 py-0">渝中区·洪崖洞</p>
@@ -274,7 +277,7 @@
                         <a class="card-link font-small font-red" data-toggle="collapse" href="#card3">卡片三</a>
                     </div>
                     <div id="card3" class="collapse" data-parent="#parent">
-                        <div class="card-body row no-gutters">
+                        <div class="card-body p-1 row no-gutters">
                             <img class="col-4 w-100" src="../img/foods/timg.jpg" alt="">
                             <div class="col-8 p-3">
                                 <p class="text-primary font-small m-0 mb-1 py-0">解放碑·酸辣粉</p>
@@ -285,33 +288,42 @@
                 </div>
                 <div class="card">
                     <div class="card-header p-1">
-                        <a class="card-link font-small font-red" data-toggle="collapse" href="#card3">卡片四</a>
+                        <a class="card-link font-small font-red" data-toggle="collapse" href="#card4">卡片四</a>
                     </div>
-                    <div id="card3" class="collapse" data-parent="#parent">
-                        <div class="card-body row no-gutters">
-                            <img class="col-4 w-100" src="../img/strategy/jingqu/ctm1.jpg" alt="">
-                            <div class="col-8 p-3">
-                                <p class="text-primary font-small m-0 mb-1 py-0">解放碑·朝天门</p>
-                                <p class="font-red font-small m-0 py-0">让山城的夜,更美</p>
-                            </div>
+                    <div id="card4" class="collapse" data-parent="#parent">
+                        <div class="card-body p-1 row no-gutters">
+                            <!-- 4 -->
+                                <img class="col-4 w-100" src="../img/strategy/jingqu/ctm1.jpg" alt="">
+                                <div class="col-8 p-3">
+                                    <p class="text-primary font-small m-0 mb-1 py-0">解放碑·朝天门</p>
+                                    <p class="font-red font-small m-0 py-0">让山城的夜,更美</p>
+                                </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header p-1">
-                        <a class="card-link font-small font-red" data-toggle="collapse" href="#card3">卡片五</a>
+                        <a class="card-link font-small font-red" data-toggle="collapse" href="#card5">卡片五</a>
                     </div>
-                    <div id="card3" class="collapse" data-parent="#parent">
-                        <div class="card-body row no-gutters">
-                            <img class="col-4 w-100" src="../img/strategy/meishi/xiaomian.jpg" alt="">
-                            <div class="col-8 p-3">
-                                <p class="text-primary font-small m-0 mb-1 py-0">老太婆·摊摊面</p>
-                                <p class="font-red font-small m-0 py-0">麻辣鲜香,筋道好面</p>
-                            </div>
+                    <div id="card5" class="collapse" data-parent="#parent">
+                        <div class="card-body p-1 row no-gutters">
+                                <!-- 5 -->
+                                <img class="col-4 w-100" src="../img/strategy/meishi/xiaomian.jpg" alt="">
+                                <div class="col-8 p-3">
+                                    <p class="text-primary font-small m-0 mb-1 py-0">老太婆·摊摊面</p>
+                                    <p class="font-red font-small m-0 py-0">麻辣鲜香,筋道好面</p>
+                                </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- 评论 -->
+            <div id="parent" class="border rounded border-red ml-2 row no-gutters mt-2">
+                <p class="col-6 bg-red text-light p-1 pl-2 m-0 text-left">评论</p>
+                <p class="col-6 bg-red text-light p-1 pr-2 m-0 text-right">
+                    <a class="text-light" href="">更多</a>
+                </p>
+            </div>      
         </div>
     </div>
 </div>
