--- a/public/food.html
+++ b/public/food.html
@@ -314,5 +314,8 @@
         </div>
     </div>
 </div>
+<footer>
+    <iframe class="my_footer" src="footer.html" frameborder="0" scrolling="no"></iframe>
+</footer>
 </body>
 </html>
