--- a/public/header.html
+++ b/public/header.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row no-gutters text-light font-small">
         <div class="col-6 text-left">巴山渝水欢迎您，祝您愉快!</div>
-        <div class="col-6 text-right">网站公告：美食、美景等你来享受哟！</div>
+        <div class="col-6 text-right">网站公告：魔幻3D网红城市--重庆欢迎您!</div>
       </div>
     </div>
 </div>
@@ -24,7 +24,7 @@
   <div class="row no-gutters">
     <div class="col-3 d-flex justify-content-center align-items-center">
       <div class="logos">
-          <img src="../img/header/logos.png" alt="">
+          <a href="index.html" target="_blank"><img src="../img/header/logos.png" alt=""></a>
       </div>
     </div>
     <div class="col-7 d-flex justify-content-start align-items-center">
@@ -35,8 +35,8 @@
         </div>
     </div>
     <div class="col-2 d-flex justify-content-around align-items-center">
-      <a class="btn btn-sm bg-red text-light px-3 " href="">登录</a>
-      <a class="btn btn-sm bg-red text-light px-3 " href="">注册</a>
+      <a class="btn btn-sm bg-red text-light px-3" target="_blank" href="login.html">登录</a>
+      <a class="btn btn-sm bg-red text-light px-3" target="_blank" href="register.html">注册</a>
     </div>
   </div> 
   <!--下部分,导航栏-->
