--- a/public/header.html
+++ b/public/header.html
@@ -42,28 +42,28 @@
   <!--下部分,导航栏-->
   <ul class="nav mt-2 bg-red">
     <li class="nav-item">
-        <a class="nav-link text-light" href="">首页</a>
+        <a class="nav-link text-light" target="_blank" href="index.html">首页</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" href="">巴渝文化</a>
+        <a class="nav-link text-light" target="_blank" href="survey.html">巴渝文化</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" href="">美食</a>
+        <a class="nav-link text-light" target="_blank" href="food.html">美食</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" href="">美景</a>
+        <a class="nav-link text-light" target="_blank" href="view.html">美景</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" href="">购物</a>
+        <a class="nav-link text-light" target="_blank" href="shop.html">购物</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" href="">酒店</a>
+        <a class="nav-link text-light" target="_blank" href="hotel.html">酒店</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" href="">攻略</a>
+        <a class="nav-link text-light" target="_blank" href="strategy.html">攻略</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" href="">资讯</a>
+        <a class="nav-link text-light" target="_blank" href="message.html">资讯</a>
     </li>
   </ul>
 </div>
