--- a/public/register.html
+++ b/public/register.html
@@ -20,7 +20,7 @@
     <!-- 左侧部分 -->
     <div class="col-7">
       <div class="card border-0 bg-transparent justify-content-around align-items-center">
-        <img class="w-100 rounded-circle" src="../img/login/login.jpg" alt="">
+        <img class="w-100 rounded-circle" src="../img/reg/reg.jpeg" alt="">
       </div>
     </div>
     <!-- 右边部分 -->
