--- a/public/strategy.html
+++ b/public/strategy.html
@@ -112,14 +112,14 @@
                         <div class="card p-2 border-0 bg-transparent">
                             <img class="w-100" src="../img/strategy/meishi/huoguo1.jpg" alt="">
                             <p class="text-center text-primary font-small m-0 mt-1 py-0">洞子·老火锅</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">麻辣爽口,回味无穷</p>
+                            <!-- <p class="text-center font-red font-small m-0 mt-1 py-0">麻辣爽口,回味无穷</p> -->
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="card p-2 border-0 bg-transparent">
-                            <img class="w-100" src="../img/foods/timg.jpg" alt="">
+                            <img class="w-100" src="../img/strategy/meishi/timg.jpg" alt="">
                             <p class="text-center text-primary font-small m-0 mt-1 py-0">解放碑·酸辣粉</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p>
+                            <!-- <p class="text-center font-red font-small m-0 mt-1 py-0">酸辣可口,美味无限</p> -->
                         </div>
                     </div>
                     <!-- 一行两个 -->
@@ -127,14 +127,14 @@
                         <div class="card p-2 border-0 bg-transparent">
                             <img class="w-100" src="../img/strategy/meishi/xiaomian.jpg" alt="">
                             <p class="text-center text-primary font-small m-0 mt-1 py-0">老太婆·摊摊面</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">麻辣鲜香,筋道好面</p>
+                            <!-- <p class="text-center font-red font-small m-0 mt-1 py-0">麻辣鲜香,筋道好面</p> -->
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="card p-2 border-0 bg-transparent">
                             <img class="w-100" src="../img/strategy/meishi/laziji.jpg" alt="">
                             <p class="text-center text-primary font-small m-0 mt-1 py-0">歌乐山·辣子鸡</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">体验辣椒里面找鸡肉</p>
+                            <!-- <p class="text-center font-red font-small m-0 mt-1 py-0">体验辣椒里面找鸡肉</p> -->
                         </div>
                     </div>  
                                       <!-- 景区攻略 -->
@@ -208,14 +208,14 @@
                         <div class="card p-2 border-0 bg-transparent">
                             <img class="w-100" src="../img/strategy/xxyl/17-yl.jpg" alt="">
                             <p class="text-center text-primary font-small m-0 mt-1 py-0">九街·缪斯酒吧</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">友情提示:蹦迪之前带护膝</p>
+                            <!-- <p class="text-center font-red font-small m-0 mt-1 py-0">友情提示:蹦迪之前带护膝</p> -->
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="card p-2 border-0 bg-transparent">
                             <img class="w-100" src="../img/strategy/xxyl/ssmj.jpg" alt="">
                             <p class="text-center text-primary font-small m-0 mt-1 py-0">北碚·水上麻将</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">夏天,让你依然快乐</p>
+                            <!-- <p class="text-center font-red font-small m-0 mt-1 py-0">夏天,让你依然快乐</p> -->
                         </div>
                     </div>
                     <!-- 一行两个 -->
@@ -223,14 +223,14 @@
                         <div class="card p-2 border-0 bg-transparent">
                             <img class="w-100" src="../img/strategy/xxyl/wmyx.jpg" alt="">
                             <p class="text-center text-primary font-small m-0 mt-1 py-0">完美影像</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">白天逛街,晚上洗脚</p>
+                            <!-- <p class="text-center font-red font-small m-0 mt-1 py-0">白天逛街,晚上洗脚</p> -->
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="card p-2 border-0 bg-transparent">
                             <img class="w-100" src="../img/strategy/xxyl/wqjd.jpg" alt="">
                             <p class="text-center text-primary font-small m-0 mt-1 py-0">温泉酒店</p>
-                            <p class="text-center font-red font-small m-0 mt-1 py-0">其实冬天也可以玩水上麻将</p>
+                            <!-- <p class="text-center font-red font-small m-0 mt-1 py-0">其实冬天也可以玩水上麻将</p> -->
                         </div>
                     </div>                 
                 </div>
@@ -326,6 +326,9 @@
             </div>      
         </div>
     </div>
+    <footer>
+        <iframe class="my_footer" src="footer.html" frameborder="0" scrolling="no"></iframe>
+    </footer>
 </div>
 </body>
 </html>
