--- a/public/header.html
+++ b/public/header.html
@@ -48,13 +48,13 @@
         <a class="nav-link text-light" target="_blank" href="survey.html">巴渝文化</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link text-light" target="_blank" href="shop.html">休闲娱乐</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link text-light" target="_blank" href="food.html">美食</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-light" target="_blank" href="view.html">美景</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-light" target="_blank" href="shop.html">购物</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-light" target="_blank" href="hotel.html">酒店</a>
