--- a/public/shop.html
+++ b/public/shop.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>购物</title>
+    <title>休闲娱乐</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="../css/bootstrap.css">
