--- a/public/message.html
+++ b/public/message.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title></title>
+    <title>资讯</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="../css/bootstrap.css">
@@ -9,11 +9,161 @@
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../css/comm.css">
-    <link rel="stylesheet" href="../css/food.css">
+    <link rel="stylesheet" href="../css/message.css">
 </head>
 <body>
 <header>
     <iframe class="my_header" src="header.html" frameborder="0" scrolling="no"></iframe>
 </header>
+<div class="container">
+    <div class="row no-gutters">
+    <!--左面-->
+        <div class="col-9">
+            <div class=" border border-red">
+            <!-- 标题-->
+            <p class="bg-red text-light p-1 pl-2 m-0">旅游资讯</p>
+            <!-- 内容-->
+            <ul class="list-group p-0">
+                <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
+                        <a href="message1.html" class="text-muted ml-3" target="_blank">
+                        <span class="forge">如果只能选择一个地方旅游,那么一定要选择重庆!</span>
+                        </a>
+                        <p class="text-muted mb-2 text-right mr-2">2019-12-1</p>
+                </li>
+                <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
+                    <a href="" class="text-muted ml-3">
+                        <span class="forge">那些你不知道的重庆传说</span>
+                    </a>
+                    <p class="text-muted mb-2  text-right mr-2">2019-11-15</p>
+                </li>
+                <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
+                    <a href="" class="text-muted ml-3">
+                        <span class="forge">第一次去重庆旅游的朋友，这些事你一定要知道，不然会后悔！</span>
+                    </a>
+                    <p class="text-muted mb-2  text-right mr-2">2019-11-15</p>
+                </li>
+                <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
+                    <a href="" class="text-muted ml-3">
+                        <span class="forge">重庆一处景区被誉为“鬼城”,白天热闹非凡,晚上却空无一人</span>
+                    </a>
+                    <p class="text-muted mb-2  text-right mr-2">2019-10-29</p>
+                </li>
+                <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
+                    <a href="" class="text-muted ml-3">
+                        <span class="forge">美呆了!重庆这两个景区迎来初雪 堆雪人、打雪仗</span>
+                    </a>
+                    <p class="text-muted mb-2  text-right mr-2">2019-10-25</p>
+                </li>
+                <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
+                    <a href="" class="text-muted ml-3">
+                        <span class="forge">重庆的招牌景点,每天晚上游客把道路堵死,只为看一眼最美的夜景 </span>
+                    </a>
+                    <p class="text-muted mb-2  text-right mr-2">2019-10-15</p>
+                </li>
+                <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
+                    <a href="" class="text-muted ml-3">
+                        <span class="forge">重庆最凄凉古镇,变成5A景区服务区,游客:来这里只是为了上厕所 </span>
+                    </a>
+                    <p class="text-muted mb-2  text-right mr-2">2019-10-10</p>
+                </li>
+                <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
+                    <a href="" class="text-muted ml-3">
+                        <span class="forge">浅析重庆特色地名地理文化特征</span>
+                    </a>
+                    <p class="text-muted mb-2  text-right mr-2">2019-10-1</p>
+                </li>
+                <li class="border-bottom border-secondary list-unstyled mt-3 text-middle">
+                    <a href="" class="text-muted ml-3">
+                        <span class="forge">重庆话重庆魂,重庆城头趣事多,盘点重庆话中容易让人误解的词语 </span>
+                    </a>
+                    <p class="text-muted mb-2  text-right mr-2">2019-9-20</p>
+                </li>
+                <li class="list-unstyled mt-3 text-middle">
+                    <a href="" class="text-muted ml-3">
+                        <span class="forge"> 重庆主城最适合发呆的四个地方 </span>
+                    </a>
+                    <p class="text-muted mb-2  text-right mr-2">2019-9-15</p>
+                </li>
+            </ul>
+            </div>
+            <!-- 分页条-->
+            <div class="bg-red my-2 rounded">
+                <ul class="pagination justify-content-end pagination-sm py-1 mr-3">
+                    <li class="page-item disabled">
+                        <a class="page-link bg-transparent rounded font-small" href="">上一页</a>
+                    </li>
+                    <li class="page-item active">
+                        <a class="page-link bg-transparent rounded font-small" href="">1</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link bg-transparent rounded font-small" href="">2</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link bg-transparent rounded font-small" href="">3</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link bg-transparent rounded font-small" href="">4</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link bg-transparent rounded font-small" href="">5</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link bg-transparent rounded font-small" href="">下一页</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    <!-- 右面-->
+        <div class="col-3">
+            <!-- 热点图片-->
+            <div class="border border-red rounded mt-3 ml-2 ">
+                <p class="bg-red text-light mb-1">热门图片</p>
+                <img src="../img/message/rm.jpg" alt=""class="w-100 ph p-1">
+                <strong>朝天门最美夜景</strong>
+                <img src="../img/message/rm1.jpg" alt=""class="w-100 ph p-1">
+            </div>
+            <!-- 评论 -->
+            <div id="parent" class="border rounded border-red ml-2 row no-gutters mt-4">
+                <p class="col-6 bg-red text-light p-1 pl-2 m-0 text-left">评论</p>
+                <p class="col-6 bg-red text-light p-1 pr-2 m-0 text-right">
+                    <a class="text-light" href="">更多</a>
+                </p>
+                <ul class="list-unstyled w-100">
+                    <li class="m-2 border-bottom border-red">
+                        <p class="m-0 p-0 py-1 font-red font-small">酸辣粉真好吃很快就回来好了收到反腐</p>
+                        <p class="m-0 p-0 py-1 font-red font-small d-flex">
+                            <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
+                            <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
+                        </p>
+                    </li>
+                    <li class="m-2 border-bottom border-red">
+                        <p class="m-0 p-0 py-1 font-red font-small">火锅太美味了</p>
+                        <p class="m-0 p-0 py-1 font-red font-small d-flex">
+                            <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
+                            <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
+                        </p>
+                    </li>
+                    <li class="m-2 border-bottom border-red">
+                        <p class="m-0 p-0 py-1 font-red font-small">毛血旺巴适得板!</p>
+                        <p class="m-0 p-0 py-1 font-red font-small d-flex">
+                            <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
+                            <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
+                        </p>
+                    </li>
+                    <li class="m-2 border-bottom border-red">
+                        <p class="m-0 p-0 py-1 font-red font-small">九村烤脑花好吃的吞舌头</p>
+                        <p class="m-0 p-0 py-1 font-red font-small d-flex">
+                            <span class="col-5 p-0 d-inline-block text-primary">匿名用户</span>
+                            <span class="col-7 p-0 d-inline-block text-primary text-right">2019-12-7 16:38:00</span>
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        </div>
+</div>
+<footer>
+    <iframe class="my_footer" src="footer.html" frameborder="0" scrolling="no"></iframe>
+</footer>
 </body>
 </html>
