--- a/public/survey.html
+++ b/public/survey.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>巴渝文化</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../css/comm.css">
+    <link rel="stylesheet" href="../css/survey.css">
 </head>
 <body>
-    
+<header>
+    <iframe class="my_header" src="header.html" frameborder="0" scrolling="no"></iframe>
+</header>
+<div class="container">
+    <div class=" border border-red mb-3">
+        <ul class="breadcrumb border-bottom border-red">
+            <li class="breadcrumb-item">
+                <a href="" class="text-muted mock">首页</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="" class="text-muted mock">巴渝文化</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="" class="text-dark mock">正文</a>
+            </li>
+        </ul>
+        <div class="retract font-large">
+            <h2 class="font-weight-bold mb-4 font-red text-center">重庆概况</h2>
+            <img src="../img/survey/ttitle.jpg" alt="" class="w-90 h-80 mb-4 among">
+            <p class="font-color font-small">重庆，简称渝或巴， 是中华人民共和国直辖市、国家中心城市 、超大城市、国际大都市，长江上游地区的经济、金融、科创、航运和商贸物流中心， 西部大开发重要的战略支点、“一带一路”和长江经济带重要的联结点以及内陆开放高地； 既以江城、雾都著称，又以山城扬名。</p>
+
+            <h3 class="mt-5 font-weight-bold">重庆历史</h3>
+            <img src="../img/survey/history.jpg" alt="" class="w-90 h-80 mb-4 among">
+            <p class="mb-4 font-color font-small">重庆是国家历史文化名城。两万多年前的旧石器时代，这里就出现了人类的生息繁衍活动，到新石器时代，已有较稠密的原始村落，分别居住着夷、濮、苴等八个民族。正是这些最早的重庆居民，创造了重庆最古老的历史文明。1189年，宋光宗赵惇先封恭王再即帝位，自诩“双重喜庆”，重庆由此得名。重庆既是“红岩精神”起源地，又是巴渝文化发祥地， “火锅”、“吊脚楼”等影响深远；在3000余年历史中，曾三为国都，四次筑城，史称“巴渝”；抗战时期为国民政府陪都。</p>
+            <h3 class="mt-5 font-weight-bold">重庆地理</h3>
+            <img src="../img/survey/dl.jpg" alt="" class="w-90 mb-4 h-80 among">
+            <p class="mb-4 font-color font-small">重庆地处中国西南部，东邻湖北、湖南，南靠贵州，西接四川，北连陕西。总面积8.24万平方千米，辖38个区县（自治县）；2016年常住人口3048.43万，城镇化率62.6%，地区生产总值17558.76亿元。 有“中国火锅之都、“中国会展名城” 、“世界温泉之都” 之称。 重庆是中国西南地区融贯东西，汇通南北的综合交通枢纽。重庆地处盆地东部，地形由南北向长江河谷倾斜，地貌以丘陵、山地为主，其山地占76%；气候冬暖春早，夏热秋凉，长江横贯境内，流程679公里。</p>
+            <h3 class="mt-5 font-weight-bold">重庆文化</h3>
+            <img src="../img/survey/culture.jpg" alt="" class="w-90 mb-4 h-80 among">
+            <p class="mb-4 font-color font-small">重庆古称江州，以后又称巴郡、楚州、渝州、恭州。南北朝时，巴郡改为楚州。公元581年隋文帝改楚州为渝州，重庆始简称“ 渝”。公元1189年，宋光宗先封恭王，后即帝位，自诩“双重喜庆”，升恭州为重庆府，重庆由此得名，距今已有800余年。1891年重庆成为中国最早对外开埠的内陆通商口岸。1929年重庆正式建市。1937年至1946年，日本向中国发动侵略战争，1937年11月20日，国民政府发布《国民政府移驻重庆宣言》，12月1日正式在重庆办公，重庆成为中华民国战时首都。1940年9月6日国民政府明确规定重庆为中华民国陪都。重庆是当时全国抗日战争和反法西斯的最高指挥部，世界著名的反法西斯中心，中国大后方的政治、经济、文化中心，故重庆又有“ 三都之地”之称。新中国建立初期重庆作为中共中央西南局和西南军政委员会驻地，是西南地区政治、经济、文化中心，为中央直辖市。1952年8月，恢复四川省，重庆仍为直辖市。1954年6月，西南大区撤销后重庆改为四川省辖市，同期由直辖市降为省辖市的还有哈尔滨、长春、沈阳、旅大、鞍山、抚顺、本溪、武汉、广州、西安。　1983年率先成为全国经济体制综合改革试点城市，成为计划单列市，赋予省级经济管理权限。1992年辟为沿江开放城市。　1996年9月中央批准重庆代管万县市（现重庆市万州区）、涪陵市和黔江地区。1997年3月14日，经八届全国人大五次会议审议批准，重庆恢复为中央直辖市，于1997年6月18日正式挂牌。重庆成为继北京、天津、上海之后的中国第四个中央直辖市，也是中国中西部地区唯一的中央直辖市，从此掀开了重庆建设与发展史上崭新的一页</p>
+            <h3 class="mt-5 font-weight-bold">重庆名人</h3>
+            <p class="mb-4 font-color font-small">聂荣臻，江津人，十大元帅之一。 刘伯承，开县人（今开州区），十大元帅之一。 杨尚昆，潼南人，曾任中华人民共和国主席。   邹容，中学历史课本有提到，《革命军》一书作者。卢作孚，合川人，北碚缔造者，民生轮船公司创办者，抗战时帮助国民政府抢运物资至重庆。 施光南，南岸人，作曲家，代表曲目《在希望的田野上》，《祝酒歌》，《月光下的凤尾竹》《吐鲁番的葡萄熟了》。现南岸有施光南大剧院。何其芳，万州人，诗人。三毛，作家，生于重庆，长于台湾。秦良玉，忠县人，明朝末年著名女将。 李宗羲，开县人（今开州区），清末封疆大吏，官至山西巡抚、两江总督。</p>
+        </div>
+    </div>
+</div>
+<footer>
+    <iframe class="my_footer" src="footer.html" frameborder="0" scrolling="no"></iframe>
+</footer>
 </body>
 </html>
