--- a/public/index.html
+++ b/public/index.html
@@ -143,9 +143,9 @@
     <!--6排2--> 
    <div  class="col-6 ">
        <div class="mx-4">
-          <img src="../img/index/Cii_NlmGy0SIH32WABs-xrFiuLcAAGcxgFXAI4AGz7e938_w500_h280_c1_t0.jpg" class="w-7" >
-          <img src="../img/index/Cii_NlmGy0SIH32WABs-xrFiuLcAAGcxgFXAI4AGz7e938_w500_h280_c1_t0.jpg" class="w-8" > &nbsp; 
-          <img src="../img/index/Cii_NlmGy0SIH32WABs-xrFiuLcAAGcxgFXAI4AGz7e938_w500_h280_c1_t0.jpg" class="w-8" >
+          <img src="../img/survey/dl.jpg" class="w-7" >
+          <img src="../img/index/02.jpg" class="w-8" > &nbsp; 
+          <img src="../img/index/01.jpg" class="w-8" >
         </div>
         </div>
     <!--6排3-->
